--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
     <link type="text/css" media="only screen and (max-width: 768px)" href="assets/cache/autoptimize/css/autoptimize_dcb2de333eec7ab4ae31385ed8d6a393.css" rel="stylesheet" />
     <title>About Us &#8211; Triple C</title>
     <link rel='dns-prefetch' href='http://s.w.org/' />
-    <link rel="alternate" type="application/rss+xml" title="Nonprofit wordpress theme- Goza &raquo; Feed" href="feed/index.html" />
-    <link rel="alternate" type="application/rss+xml" title="Nonprofit wordpress theme- Goza &raquo; Comments Feed" href="comments/feed/index.html" />
+    <link rel="alternate" type="application/rss+xml" title="Triple C &raquo; Feed" href="feed/index.html" />
+    <link rel="alternate" type="application/rss+xml" title="Triple C &raquo; Comments Feed" href="comments/feed/index.html" />
     <link rel='stylesheet' id='dashicons-css' href='wp-includes/css/dashicons.min2513.css?ver=5.2.3' type='text/css' media='all' />
     <link rel='stylesheet' id='fw-googleFonts-css' href='http://fonts.googleapis.com/css?family=Poppins%3A700%2C600%2C500%2Cregular%7CArimo%3Aregular%7CMontserrat%3A700&amp;subset=devanagari%2Clatin-ext%2Clatin&amp;ver=5.2.3' type='text/css' media='all' />
 
@@ -373,10 +373,10 @@
                             <aside id="custom_html-16" class="widget_text widget widget_custom_html">
                                 <div class="textwidget custom-html-widget">
                                     <ul class="bt-top-left">
-                                        <li><a href="mailto:bearstheme@gmail.com"><i class="fa fa-envelope"
+                                        <li><a href="mailto:info@triplec.com"><i class="fa fa-envelope"
 													aria-hidden="true"></i>Send Us Email: info@triplec.com</a></li>
-                                        <li><a href="tel:0912345670"><i class="fa fa-phone" aria-hidden="true"></i>Call
-												Us Now: +234 -234-5670</a></li>
+                                        <li><a href="tel:08184764688"><i class="fa fa-phone" aria-hidden="true"></i>Call
+												Us Now: 08184764688</a></li>
                                     </ul>
                                 </div>
                             </aside>
@@ -389,7 +389,7 @@
                 <div class="container">
                     <div class="bt-container-logo bt-vertical-align-middle">
                         <div class="fw-wrap-logo">
-                            <a href="index.html" class="fw-site-logo"> <img src="assets/uploads/2019/05/logo.png" alt="Nonprofit wordpress theme- Goza" class="main-logo" /> </a>
+                            <a href="index.html" class="fw-site-logo"> <img src="assets/uploads/2019/05/logo.png" alt="Triple C" class="main-logo" /> </a>
                         </div>
                     </div>
                     <!--
@@ -441,9 +441,9 @@
 														aria-hidden="true"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="top-bar-c c2 col-2"> <a href="tel:0912345670"><i class="fa fa-phone"
+                                    <div class="top-bar-c c2 col-2"> <a href="tel:08184764688"><i class="fa fa-phone"
 												aria-hidden="true"></i> +234-802-5670</a></div>
-                                    <div class="top-bar-c c3 col-3"> <a href="mailto:bearstheme@gmail.com"><i
+                                    <div class="top-bar-c c3 col-3"> <a href="mailto:info@triplec.com"><i
 												class="fa fa-envelope" aria-hidden="true"></i> info@triplec.com</a>
                                     </div>
                                     <!-- <div class="top-bar-c c4"> <a href="#!"><i class="fa fa-heart"
@@ -460,7 +460,7 @@
                     <div class="container">
                         <div class="bt-container-logo bt-vertical-align-middle">
                             <div class="fw-wrap-logo">
-                                <a href="index.html" class="fw-site-logo"> <img src="assets/uploads/2019/05/logo.png" alt="Nonprofit wordpress theme- Goza" class="main-logo" /> </a>
+                                <a href="index.html" class="fw-site-logo"> <img src="assets/uploads/2019/05/logo.png" alt="Triple C" class="main-logo" /> </a>
                             </div>
                         </div>
                         <!--
@@ -487,7 +487,7 @@
 											style=""><a href="our-blog/index.html"><span>BLOGS</span></a></li> -->
                                         <li id="menu-item-21" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-21" style=""><a href="contact.html"><span>CONTACT</span></a></li>
 
-                                        <li id="menu-item-3973" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-3973 menu-item-custom-type-button_donate menu-item-hidden-title-yes bt-donate-c" style=""><a href="campaigns/index.html"><span>Donate Now</span></a>
+                                        <li id="menu-item-3973" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-3973 menu-item-custom-type-button_donate menu-item-hidden-title-yes bt-donate-c" style=""><a href="campaigns/index.html"><span>Grant Form</span></a>
                                             <div id="give-form-626-wrap" class="give-form-wrap give-display-button give-display-button-only">
                                                 <h2 class="give-form-title">Africa Children Need More Food, Water &#038; Clothes
                                                 </h2>
@@ -521,7 +521,7 @@
 														<option data-price-id="custom"
 															class="give-donation-level-custom" value="custom">Give a
 															Custom Amount</option>
-													</select><button type="button" class="give-btn give-btn-modal">Donate Now</button>
+													</select><button type="button" class="give-btn give-btn-modal">Grant Form</button>
                                                     <fieldset id="give-payment-mode-select">
                                                         <legend class="give-payment-mode-label">Select Payment Method
                                                             <span class="give-loading-text"><span
@@ -574,7 +574,7 @@
                                                             <p id="give-final-total-wrap" class="form-wrap "> <span class="give-donation-total-label"> Donation Total:
 																</span> <span class="give-final-total-amount" data-total="20"> &#36;20 </span></p> <input type="hidden" name="give_action" value="purchase" />
                                                             <input type="hidden" name="give-gateway" value="manual" />
-                                                            <div class="give-submit-button-wrap give-clearfix"> <input type="submit" class="give-submit give-btn" id="give-purchase-button" name="give-purchase" value="Donate Now" data-before-validation-label="Donate Now" /> <span class="give-loading-animation"></span></div>
+                                                            <div class="give-submit-button-wrap give-clearfix"> <input type="submit" class="give-submit give-btn" id="give-purchase-button" name="give-purchase" value="Grant Form" data-before-validation-label="Grant Form" /> <span class="give-loading-animation"></span></div>
                                                         </fieldset>
                                                     </div>
                                                 </form>
@@ -638,7 +638,7 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="vc_btn3-container  button-p vc_btn3-center">
-                                                                    <a style="background-color:#e30013; color:#ffffff;" class="vc_general vc_btn3 vc_btn3-size-md vc_btn3-shape-rounded vc_btn3-style-custom" href="#!" title="">Donate Now</a></div>
+                                                                    <a style="background-color:#e30013; color:#ffffff;" class="vc_general vc_btn3 vc_btn3-size-md vc_btn3-shape-rounded vc_btn3-style-custom" href="#!" title="">Grant Form</a></div>
                                                                     <div class="vc_row wpb_row vc_inner vc_row-fluid vc_custom_1546570727235">
                                                                             <div class="wpb_column vc_column_container vc_col-sm-3 vc_col-has-fill">
                                                                                 <div class="vc_column-inner vc_custom_1546584685772">
@@ -818,10 +818,8 @@
                                             <div class="wpb_text_column wpb_content_element ">
                                                 <div class="wpb_wrapper">
                                                     <p><span style="color: #c3c3c3;">Company address</span></p>
-                                                    <p><span class="accent-color"><strong>Helpline</strong></span>: <a href="tel:04415555622"><span style="color: #c3c3c3;">+234
-																802 415
-																5556 22</span></a></p>
-                                                    <p><span class="accent-color"><strong>Email</strong></span>: <a href="mailto:bearstheme@domain.com"><span
+                                                    <p><span class="accent-color"><strong>Helpline</strong></span>: <a href="tel:08184764688"><span style="color: #c3c3c3;">08184764688</span></a></p>
+                                                    <p><span class="accent-color"><strong>Email</strong></span>: <a href="mailto:info@triplec.com"><span
 																style="color: #c3c3c3;">info@triplec.com</span></a>
                                                     </p>
                                                 </div>
