--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@
                                         <li id="menu-item-3973" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-3973  bt-grantform" style="">
                                             <a href="
                                             https://rave.flutterwave.com/pay/triplec
-                                            " data-toggle="modal" data-target="#grant" title="Purchase Grant form for N2000 only"><span>Get Grant
+                                            " title="Purchase Grant form for N2000 only"><span>Get Grant
                                                     Form</span></a>
 
 
