--- a/events.html
+++ b/events.html
@@ -310,100 +310,10 @@
 											style=""><a href="our-blog/index.html"><span>BLOGS</span></a></li> -->
                                         <li id="menu-item-21" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-21" style=""><a href="contact.html"><span>CONTACT</span></a></li>
 
-                                        <li id="menu-item-3973" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-3973 menu-item-custom-type-button_donate menu-item-hidden-title-yes bt-donate-c" style=""><a href="campaigns/index.html"><span>Grant Form</span></a>
-                                            <div id="give-form-626-wrap" class="give-form-wrap give-display-button give-display-button-only">
-                                                <h2 class="give-form-title">Africa Children Need More Food, Water &#038; Clothes
-                                                </h2>
-                                                <div class="give_error give_warning" id="give_error_test_mode">
-                                                    <p><strong>Notice:</strong> Test mode is enabled. While in test mode no live donations are processed.</p>
-                                                </div>
-                                                <form id="give-form-626-1" class="give-form give-form-626 give-form-type-multi" action="https://bearsthemespremium.com/theme/goza/?payment-mode=manual" data-id="626-1" data-currency_symbol="&#36;" data-currency_code="USD" data-currency_position="before"
-                                                    data-thousands_separator="," data-decimal_separator="." data-number_decimals="0" method="post">
-                                                    <!-- The following field is for robots only, invisible to humans: -->
-                                                    <span class="give-hidden" style="display: none !important;"> <label
-															for="give-form-honeypot-626"></label> <input
-															id="give-form-honeypot-626" type="text" name="give-honeypot"
-															class="give-honeypot give-hidden" /> </span> <input type="hidden" name="give-form-id-prefix" value="626-1" /> <input type="hidden" name="give-form-id" value="626" /> <input type="hidden"
-                                                        name="give-form-title" value="Africa Children Need More Food, Water &amp; Clothes" />
-                                                    <input type="hidden" name="give-current-url" value="index.html" />
-                                                    <input type="hidden" name="give-form-url" value="index.html" />
-                                                    <input type="hidden" name="give-form-minimum" value="20" /> <input type="hidden" name="give-form-maximum" value="1000000" /> <input type="hidden" name="give-form-hash" value="23d6eaeb49" data-time="1568993542"
-                                                        data-nonce-life="86400" data-donor-session="0" /><input type="hidden" name="give-price-id" value="1" />
-                                                    <div class="give-total-wrap">
-                                                        <div class="give-donation-amount form-row-wide"> <span class="give-currency-symbol give-currency-position-before">&#36;</span>
-                                                            <label class="give-hidden" for="give-amount">Donation
-																Amount:</label> <input class="give-text-input give-amount-top" id="give-amount" name="give-amount" type="tel" placeholder="" value="20" autocomplete="off"></div>
-                                                    </div> <label for="give-donation-level-select-626" class="give-hidden">Choose Your Donation Amount:</label><select id="give-donation-level-select-626" class="give-select give-select-level give-donation-levels-wrap">
-														<option data-price-id="0" class="give-donation-level-0"
-															value="10" data-default="0">&#8358;10</option>
-														<option data-price-id="1"
-															class="give-donation-level-1 give-default-level" value="20"
-															selected="selected" data-default="1">&#8358;20</option>
-														<option data-price-id="2" class="give-donation-level-2"
-															value="30" data-default="0">&#8358;30</option>
-														<option data-price-id="custom"
-															class="give-donation-level-custom" value="custom">Give a
-															Custom Amount</option>
-													</select><button type="button" class="give-btn give-btn-modal">Grant Form</button>
-                                                    <fieldset id="give-payment-mode-select">
-                                                        <legend class="give-payment-mode-label">Select Payment Method
-                                                            <span class="give-loading-text"><span
-																	class="give-loading-animation"></span> </span>
-                                                        </legend>
-                                                        <div id="give-payment-mode-wrap">
-                                                            <ul id="give-gateway-radio-list">
-                                                                <li class="give-gateway-option-selected"> <input type="radio" name="payment-mode" class="give-gateway" id="give-gateway-manual-626-1" value="manual" checked='checked'> <label for="give-gateway-manual-626-1" class="give-gateway-option"
-                                                                        id="give-gateway-option-manual"> Test
-																		Donation</label></li>
-                                                                <li> <input type="radio" name="payment-mode" class="give-gateway" id="give-gateway-offline-626-1" value="offline">
-                                                                    <label for="give-gateway-offline-626-1" class="give-gateway-option" id="give-gateway-option-offline"> Offline
-																		Donation</label></li>
-                                                            </ul>
-                                                        </div>
-                                                    </fieldset>
-                                                    <div id="give_purchase_form_wrap">
-                                                        <fieldset id="give_checkout_user_info" class="">
-                                                            <legend> Personal Info</legend>
-                                                            <p id="give-first-name-wrap" class="form-row form-row-first form-row-responsive">
-                                                                <label class="give-label" for="give-first"> First Name
-																	<span class="give-required-indicator">*</span> <span
-																		class="give-tooltip hint--top hint--medium hint--bounce"
-																		aria-label="First Name is used to personalize your donation record."
-																		rel="tooltip"><i
-																			class="give-icon give-icon-question"></i></span>
-																</label> <input class="give-input required" type="text" name="give_first" autocomplete="given-name" placeholder="First Name" id="give-first" value="" required aria-required="true"
-                                                                /></p>
-                                                            <p id="give-last-name-wrap" class="form-row form-row-last form-row-responsive">
-                                                                <label class="give-label" for="give-last"> Last Name
-																	<span
-																		class="give-tooltip hint--top hint--medium hint--bounce"
-																		aria-label="Last Name is used to personalize your donation record."
-																		rel="tooltip"><i
-																			class="give-icon give-icon-question"></i></span>
-																</label> <input class="give-input" type="text" name="give_last" autocomplete="family-name" id="give-last" placeholder="Last Name" value="" />
-                                                            </p>
-                                                            <p id="give-email-wrap" class="form-row form-row-wide">
-                                                                <label class="give-label" for="give-email"> Email
-																	Address <span
-																		class="give-required-indicator">*</span> <span
-																		class="give-tooltip hint--top hint--medium hint--bounce"
-																		aria-label="We will send the donation receipt to this address."
-																		rel="tooltip"><i
-																			class="give-icon give-icon-question"></i></span>
-																</label> <input class="give-input required" type="email" name="give_email" autocomplete="email" placeholder="Email Address" id="give-email" value="" required aria-required="true"
-                                                                /></p>
-                                                        </fieldset>
-                                                        <fieldset id="give_purchase_submit" class="give-donation-submit">
-                                                            <p id="give-final-total-wrap" class="form-wrap "> <span class="give-donation-total-label"> Donation Total:
-																</span> <span class="give-final-total-amount" data-total="20"> &#36;20 </span></p> <input type="hidden" name="give_action" value="purchase" />
-                                                            <input type="hidden" name="give-gateway" value="manual" />
-                                                            <div class="give-submit-button-wrap give-clearfix"> <input type="submit" class="give-submit give-btn" id="give-purchase-button" name="give-purchase" value="Grant Form" data-before-validation-label="Grant Form" /> <span class="give-loading-animation"></span></div>
-                                                        </fieldset>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                            <!--end #give-form-626-->
-                                        </li>
+                                        <li id="menu-item-3973" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-3973  bt-grantform" style="">
+                                                <a href="https://rave.flutterwave.com/pay/triplec-grant" title="Purchase Grant form for N2000 only"><span>Get Grant
+                                                        Form</span></a>
+                                            </li>
                                     </ul>
                                 </nav>
                             </div>
