--- a/about.html
+++ b/about.html
@@ -385,7 +385,7 @@
                                         <li id="menu-item-21" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-21" style=""><a href="contact.html"><span>CONTACT</span></a></li>
 
                                         <li id="menu-item-3973" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-3973  bt-grantform" style="">
-                                                <a href="https://rave.flutterwave.com/pay/triplec-grant" title="Purchase Grant form for N2000 only"><span>Get Grant
+                                                <a href="https://rave.flutterwave.com/pay/triplecgrant" title="Purchase Grant form for N2000 only"><span>Get Grant
                                                         Form</span></a>
                                             </li>
                                     </ul>
@@ -445,7 +445,7 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="vc_btn3-container  button-p vc_btn3-center">
-                                                                    <a style="background-color:#e30013; color:#ffffff;" class="vc_general vc_btn3 vc_btn3-size-md vc_btn3-shape-rounded vc_btn3-style-custom" href="https://rave.flutterwave.com/pay/triplec-grant" title="">Get Grant Form</a></div>
+                                                                    <a style="background-color:#e30013; color:#ffffff;" class="vc_general vc_btn3 vc_btn3-size-md vc_btn3-shape-rounded vc_btn3-style-custom" href="https://rave.flutterwave.com/pay/triplecgrant" title="">Get Grant Form</a></div>
                                                                     <div class="vc_row wpb_row vc_inner vc_row-fluid vc_custom_1546570727235">
                                                                             <div class="wpb_column vc_column_container vc_col-sm-3 vc_col-has-fill">
                                                                                 <div class="vc_column-inner vc_custom_1546584685772">
