--- a/contact.html
+++ b/contact.html
@@ -313,7 +313,7 @@
                                         <li id="menu-item-21" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-21  current-menu-item current_page_item" style=""><a href="contact.html"><span>CONTACT</span></a></li>
 
                                         <li id="menu-item-3973" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-3973  bt-grantform" style="">
-                                                <a href="https://rave.flutterwave.com/pay/triplec-grant" title="Purchase Grant form for N2000 only"><span>Get Grant
+                                                <a href="https://rave.flutterwave.com/pay/triplecgrant" title="Purchase Grant form for N2000 only"><span>Get Grant
                                                         Form</span></a>
                                             </li>
                                     </ul>
