--- a/gallery.html
+++ b/gallery.html
@@ -570,8 +570,8 @@
                             <aside id="custom_html-16" class="widget_text widget widget_custom_html">
                                 <div class="textwidget custom-html-widget">
                                     <ul class="bt-top-left">
-                                        <li><a href="mailto:info@triplec.com"><i class="fa fa-envelope"
-                                                    aria-hidden="true"></i>Send Us Email: info@triplec.com</a></li>
+                                        <li><a href="mailto:info@triplecfoundation.com.ng"><i class="fa fa-envelope"
+                                                    aria-hidden="true"></i>Send Us Email: info@triplecfoundation.com.ng</a></li>
                                         <li><a href="tel:08184764688"><i class="fa fa-phone" aria-hidden="true"></i>Call
                                                 Us Now: 08184764688</a></li>
                                     </ul>
@@ -641,8 +641,8 @@
                                     </div>
                                     <div class="top-bar-c c2 col-2"> <a href="tel:08184764688"><i class="fa fa-phone"
                                                 aria-hidden="true"></i> 08184764688</a></div>
-                                    <div class="top-bar-c c3 col-3"> <a href="mailto:info@triplec.com"><i
-                                                class="fa fa-envelope" aria-hidden="true"></i> info@triplec.com</a>
+                                    <div class="top-bar-c c3 col-3"> <a href="mailto:info@triplecfoundation.com.ng"><i
+                                                class="fa fa-envelope" aria-hidden="true"></i> info@triplecfoundation.com.ng</a>
                                     </div>
                                     <!-- <div class="top-bar-c c4"> <a href="#!"><i class="fa fa-heart"
 												aria-hidden="true"></i>Become a Volunteer</a></div> -->
@@ -685,10 +685,7 @@
 											style=""><a href="our-blog/index.html"><span>BLOGS</span></a></li> -->
                                         <li id="menu-item-21" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-21" style=""><a href="contact.html"><span>CONTACT</span></a></li>
 
-                                        <li id="menu-item-3973" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-3973  bt-grantform" style="">
-                                                <a href="https://rave.flutterwave.com/pay/triplecgrant" title="Purchase Grant form for N2000 only"><span>Get Grant
-                                                        Form</span></a>
-                                            </li>
+                                      
                                     </ul>
                                 </nav>
                             </div>
@@ -831,8 +828,8 @@
                                                         <div class="wpb_wrapper">
                                                             <p><span style="color: #c3c3c3;">Company address</span></p>
                                                             <p><span class="accent-color"><strong>Helpline</strong></span>: <a href="tel:08184764688"><span style="color: #c3c3c3;">08184764688</span></a></p>
-                                                            <p><span class="accent-color"><strong>Email</strong></span>: <a href="mailto:info@triplec.com"><span
-                                                                style="color: #c3c3c3;">info@triplec.com</span></a>
+                                                            <p><span class="accent-color"><strong>Email</strong></span>: <a href="mailto:info@triplecfoundation.com.ng"><span
+                                                                style="color: #c3c3c3;">info@triplecfoundation.com.ng</span></a>
                                                             </p>
                                                         </div>
                                                     </div>
